<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginregscreen">

    <EditText
        android:id="@+id/etRegUsername"
        android:hint="@string/space_username_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etRegEmail"
        android:hint="@string/space_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etRegPassword"
        android:hint="@string/space_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/btn_code_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/login"/>

    <TextView
        android:id="@+id/tvLoginLink"
        android:text="@string/if_have_acc"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
