<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginregscreen">

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/space_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="8dp"/>


    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/space_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/login"/>

    <TextView
        android:id="@+id/tvRegisterLink"
        android:text="@string/if_not_have_acc"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
