<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darker"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="64dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint"
                android:inputType="textCapSentences"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempr_hint"
                android:paddingTop="12dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_temp_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/underscore_hint"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tds_hint"
                android:paddingTop="12dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_salinity_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/underscore_hint"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Collect data"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/collect_data_bt" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save data"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/save_data_bt" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/receive_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scrollbars="vertical"
                android:background="#222"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:padding="6dp"
                android:gravity="start|top"
                android:overScrollMode="always"
                android:fadeScrollbars="false"
                android:layout_marginBottom="6dp" />

            <EditText
                android:id="@+id/send_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter command..."
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:background="#333"
                android:padding="6dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_forward"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:text="@string/btn_forward"
                android:textSize="18sp"
                android:backgroundTint="@color/joystick_forward" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_left"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_left"
                    android:textSize="18sp"
                    android:backgroundTint="@color/joystick_left" />

                <Space
                    android:layout_width="32dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_right"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_right"
                    android:textSize="18sp"
                    android:backgroundTint="@color/joystick_right" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_backward"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:text="@string/btn_backward"
                android:textSize="18sp"
                android:backgroundTint="@color/joystick_backward" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:text="@string/btn_stop"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
